# esp32-cam

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker_ctl.sh  local_actions.sh
.github/workflows/: build-and-tests.yml
docs/: linux_builtin_camera_capturing.c
imager_demo/: CMakeLists.txt  build.sh
imager_demo/src/: main.c
ip_camera/: partitions_singleapp.csv  sdkconfig
ip_camera/main/: idf_component.yml  main.c  softap_sta.c  take_picture.c
libsatcam/: CMakeLists.txt  Doxyfile  build.sh
libsatcam/inc/: libsatcam.h
libsatcam/src/: libsatcam.c
tools/: http_client.py  http_post_config.py
